force-app/main/default/objects/FSM_DCFDependantPicklist__c/FSM_DCFDependantPicklist__c.object-meta.xml
<CustomObject>
    <label>DCF Dependant Picklist</label>
    <nameField>
        <displayFormat>DCFDP-{000000}</displayFormat>
        <label>DCF Dependant Picklist  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCF Dependant Picklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>