force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_CodeGroupText__c.field-meta.xml
<CustomField>
    <fullName>FSM_CodeGroupText__c</fullName>
    <label>Code Group Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>