force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_NotificationCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_NotificationCode__c</fullName>
    <description>SFS-3035</description>
    <label>Notification Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>