force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_PIACodeText__c.field-meta.xml
<CustomField>
    <fullName>FSM_PIACodeText__c</fullName>
    <description>SFS-3035</description>
    <label>PIA Code Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>