force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_PIACodeType__c.field-meta.xml
<CustomField>
    <fullName>FSM_PIACodeType__c</fullName>
    <description>SFS-3035</description>
    <label>PIA Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem</fullName>
                <default>true</default>
                <label>Problem</label>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>