force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_SFAsset__c.field-meta.xml
<CustomField>
    <fullName>FSM_SFAsset__c</fullName>
    <description>Created as part of sfs-7045</description>
    <label>Asset SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S 01</fullName>
                <label>Gravity sewer (up to 225mm)</label>
            </value>
            <value>
                <fullName>S 02</fullName>
                <label>Gravity sewer (300-450mm)</label>
            </value>
            <value>
                <fullName>S 03</fullName>
                <label>Gravity sewer (525-600mm)</label>
            </value>
            <value>
                <fullName>S 04</fullName>
                <label>Gravity sewer (over 600mm)</label>
            </value>
            <value>
                <fullName>S 05</fullName>
                <label>Rising main (up to 225mm)</label>
            </value>
            <value>
                <fullName>S 07</fullName>
                <label>Rising main (226-450mm)</label>
            </value>
            <value>
                <fullName>S 08</fullName>
                <label>Rising main (Over 450mm)</label>
            </value>
            <value>
                <fullName>S 09</fullName>
                <label>Manhole</label>
            </value>
            <value>
                <fullName>S 10</fullName>
                <label>Manhole cover and frame</label>
            </value>
            <value>
                <fullName>S 11</fullName>
                <label>Inspection cover and frame</label>
            </value>
            <value>
                <fullName>S 12</fullName>
                <label>Dual Manhole</label>
            </value>
            <value>
                <fullName>S 13</fullName>
                <label>Interceptor</label>
            </value>
            <value>
                <fullName>S 14</fullName>
                <label>NRV</label>
            </value>
            <value>
                <fullName>S 15</fullName>
                <label>CSO</label>
            </value>
            <value>
                <fullName>S 16</fullName>
                <label>Ancillary</label>
            </value>
            <value>
                <fullName>S 17</fullName>
                <label>Sewerage pumping station</label>
            </value>
            <value>
                <fullName>S 18</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>S 19</fullName>
                <label>Flood Mitigation (Non - NRV)</label>
            </value>
            <value>
                <fullName>S 20</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>