force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_SFJob__c.field-meta.xml
<CustomField>
    <fullName>FSM_SFJob__c</fullName>
    <description>Created as part of sfs-7045</description>
    <label>Job SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>DLO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Contractor-CSP</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Contractor-IWJS</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>DLO-WNRT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>