force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_SFTask__c.field-meta.xml
<CustomField>
    <fullName>FSM_SFTask__c</fullName>
    <description>Created as part of sfs-7045</description>
    <label>Task SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S 01</fullName>
                <label>Repair</label>
            </value>
            <value>
                <fullName>S 02</fullName>
                <label>Reset</label>
            </value>
            <value>
                <fullName>S 03</fullName>
                <label>Construct</label>
            </value>
            <value>
                <fullName>S 04</fullName>
                <label>Remove</label>
            </value>
            <value>
                <fullName>S 05</fullName>
                <label>Sewer patch line</label>
            </value>
            <value>
                <fullName>S 06</fullName>
                <label>Sewer reline</label>
            </value>
            <value>
                <fullName>S 07</fullName>
                <label>Renew</label>
            </value>
            <value>
                <fullName>S 08</fullName>
                <label>Reactive CCTV</label>
            </value>
            <value>
                <fullName>S 09</fullName>
                <label>Planned CCTV</label>
            </value>
            <value>
                <fullName>S 10</fullName>
                <label>Reactive Sewer cleanse</label>
            </value>
            <value>
                <fullName>S 11</fullName>
                <label>Planned Sewer Cleanse</label>
            </value>
            <value>
                <fullName>S 12</fullName>
                <label>SSIP CCTV</label>
            </value>
            <value>
                <fullName>S 13</fullName>
                <label>SSIP Cleanse</label>
            </value>
            <value>
                <fullName>S 14</fullName>
                <label>SSIP Repair</label>
            </value>
            <value>
                <fullName>S 15</fullName>
                <label>Reactive Root cut</label>
            </value>
            <value>
                <fullName>S 16</fullName>
                <label>Cleanup</label>
            </value>
            <value>
                <fullName>S 17</fullName>
                <label>Support</label>
            </value>
            <value>
                <fullName>S 18</fullName>
                <label>Unplanned inspection</label>
            </value>
            <value>
                <fullName>S 19</fullName>
                <label>Flooding related CCTV</label>
            </value>
            <value>
                <fullName>S 20</fullName>
                <label>Flooding related sewer cleanse</label>
            </value>
            <value>
                <fullName>S 21</fullName>
                <label>Reinstate</label>
            </value>
            <value>
                <fullName>S 22</fullName>
                <label>Rectify defective reinstatement</label>
            </value>
            <value>
                <fullName>S 23</fullName>
                <label>Traffic management only</label>
            </value>
            <value>
                <fullName>S 24</fullName>
                <label>Mapping</label>
            </value>
            <value>
                <fullName>S 25</fullName>
                <label>Reactive tankering</label>
            </value>
            <value>
                <fullName>S 26</fullName>
                <label>Planned tankering</label>
            </value>
            <value>
                <fullName>S 27</fullName>
                <label>Reactive Wet Well Cleanse</label>
            </value>
            <value>
                <fullName>S 28</fullName>
                <label>Planned Wet Well Cleanse</label>
            </value>
            <value>
                <fullName>S 29</fullName>
                <label>Planned inspection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>