force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_SWRJobRecipient__c.field-meta.xml
<CustomField>
    <fullName>FSM_SWRJobRecipient__c</fullName>
    <description>SFS-3010</description>
    <label>SWR Job Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>DLO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Contractor-CSP</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Contractor-IWJS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>