force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_SWRJobScope__c.field-meta.xml
<CustomField>
    <fullName>FSM_SWRJobScope__c</fullName>
    <description>SFS-3010</description>
    <label>SWR Job Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>0 to 1.5m</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>0 to 2m</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>&gt;1.5 to 3m</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>&gt;2 to 3m</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>&gt;3 to 5m</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>&gt;3 to 6m</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>&gt; 5m</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>&gt; 6m</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>N/A</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>&lt;= 4000 Gallons</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>&gt; 4000 Gallons</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>&gt;2m</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>&lt;= 675mm^2</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>&gt; 675mm^2</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>&lt;= 1m^2</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>1-1.45m^2</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>&lt;= 2m^2</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>2-10m^2</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>&gt;10m^2</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>0-20m</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>20-50m</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>50-100m</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>100-200m</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>200-500m</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>&lt; 500m</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>&lt;= 750mm Deep</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>&gt; 750mm Deep</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>&lt; 3m</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>1 to 2m</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>0 to 3m</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>