force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_SWRTransferredAsset__c.field-meta.xml
<CustomField>
    <fullName>FSM_SWRTransferredAsset__c</fullName>
    <description>SFS-3010</description>
    <label>SWR Transferred Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>