force-app/main/default/objects/FSM_DCFDependantPicklist__c/fields/FSM_Task__c.field-meta.xml
<CustomField>
    <fullName>FSM_Task__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D 3</fullName>
                <label>RENEW</label>
            </value>
            <value>
                <fullName>D 4</fullName>
                <label>RE-PACK</label>
            </value>
            <value>
                <fullName>D 5</fullName>
                <label>REBUILD CHAMBER</label>
            </value>
            <value>
                <fullName>D 6</fullName>
                <label>RESET LID</label>
            </value>
            <value>
                <fullName>D 7</fullName>
                <label>SERVICE</label>
            </value>
            <value>
                <fullName>D 8</fullName>
                <label>INSTALL</label>
            </value>
            <value>
                <fullName>D 9</fullName>
                <label>CUT OFF</label>
            </value>
            <value>
                <fullName>D 10</fullName>
                <label>ABANDONED ASSET</label>
            </value>
            <value>
                <fullName>D 11</fullName>
                <label>OPERATE</label>
            </value>
            <value>
                <fullName>D 12</fullName>
                <label>PREPARE</label>
            </value>
            <value>
                <fullName>D 13</fullName>
                <label>DEPLOY</label>
            </value>
            <value>
                <fullName>D 14</fullName>
                <label>FLUSH</label>
            </value>
            <value>
                <fullName>D 15</fullName>
                <label>SAMPLE</label>
            </value>
            <value>
                <fullName>D 16</fullName>
                <label>WARN</label>
            </value>
            <value>
                <fullName>D 17</fullName>
                <label>REMOVE</label>
            </value>
            <value>
                <fullName>D 18</fullName>
                <label>INSPECTION</label>
            </value>
            <value>
                <fullName>D 19</fullName>
                <label>INSPECT FIND AND FIX</label>
            </value>
            <value>
                <fullName>D 20</fullName>
                <label>REPAIR AND REINSTATE</label>
            </value>
            <value>
                <fullName>D 21</fullName>
                <label>RENEW AND REINSTATE</label>
            </value>
            <value>
                <fullName>D 22</fullName>
                <label>INSTALL AND REINSTATE</label>
            </value>
            <value>
                <fullName>D 23</fullName>
                <label>INSPECT FIND FIX AND REINSTATE</label>
            </value>
            <value>
                <fullName>D 24</fullName>
                <label>FIXED FROM TOP - VISIBLE LEAK</label>
            </value>
            <value>
                <fullName>D 25</fullName>
                <label>FIXED FROM TOP - NON VISIBLE LEAK</label>
            </value>
            <value>
                <fullName>D 26</fullName>
                <label>BOARDS AND BARRIERS REPLENISHMENT</label>
            </value>
            <value>
                <fullName>D 27</fullName>
                <label>Temporary Disconnection</label>
            </value>
            <value>
                <fullName>D 28</fullName>
                <label>Reconnection</label>
            </value>
            <value>
                <fullName>D 29</fullName>
                <label>SHORT CONN. (0-4.5M)</label>
            </value>
            <value>
                <fullName>D 30</fullName>
                <label>MED CONN. (4.6-6.5M)</label>
            </value>
            <value>
                <fullName>D 31</fullName>
                <label>LONG CONN. (6.6-12M)</label>
            </value>
            <value>
                <fullName>D 32</fullName>
                <label>EX LONG CONN. (&gt;12 M)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>